--- a/packages/pluggableWidgets/file-uploader-web/src/ui/FileUploader.scss
+++ b/packages/pluggableWidgets/file-uploader-web/src/ui/FileUploader.scss
@@ -109,6 +109,11 @@ Place your custom CSS here
             border-radius: 4px;
             padding: 10px;
 
+            &:hover {
+                background-color: var(--bg-color-default);
+                border-color: var(--border-color-active);
+            }
+
             .entry-details {
                 flex: 1;
 
@@ -159,19 +164,54 @@ Place your custom CSS here
                 }
 
                 .entry-details-actions {
-                    flex: 0;
+                    flex: 0 0 min-content;
                     align-self: center;
-                    min-width: 24px;
-                    height: 24px;
+                    min-width: 32px;
+                    height: 32px;
 
-                    .remove-button {
-                        width: 100%;
-                        background-image: url(../assets/remove-icon.svg);
-                        background-repeat: no-repeat;
-                        background-position: center;
+                    display: flex;
+
+                    .action-button {
+                        width: 32px;
                         text-decoration: none;
                         border-color: transparent;
                         background-color: transparent;
+                    }
+
+                    .remove-icon {
+                        height: 24px;
+                        width: 24px;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-image: url(../assets/remove-icon.svg);
+
+                        &:hover {
+                            background-image: url(../assets/remove-icon-hover.svg);
+                        }
+
+                        &:active {
+                            background-image: url(../assets/remove-icon-active.svg);
+                        }
+
+                        &.disabled {
+                            display: none;
+                        }
+                    }
+
+                    .download-icon {
+                        height: 24px;
+                        width: 24px;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-image: url(../assets/view-icon.svg);
+
+                        &:hover {
+                            background-image: url(../assets/view-icon-hover.svg);
+                        }
+
+                        &:active {
+                            background-image: url(../assets/view-icon-active.svg);
+                        }
 
                         &.disabled {
                             display: none;
