--- a/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
+++ b/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
@@ -33,7 +33,7 @@ $cb-skeleton-dark: #d2d2d2;
         box-shadow: 0px 0px var(--dropdown-outer-padding, $cb-menu-outer-padding) 0px
             var(--shadow-color-border, $cb-box-shadow-color);
         background-color: var(--label-info-color, $cb-unselected-item);
-        list-style-type: "none";
+        list-style-type: none;
         &-list {
             padding: 0;
             margin-bottom: 0;
